--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "webxr-first-steps",
 	"private": true,
+	"homepage": "https://ZacharyEllison.github.io/vrps",
 	"devDependencies": {
 		"@types/three": "0.165.0",
 		"copy-webpack-plugin": "12.0.2",
@@ -16,12 +17,14 @@
 	"scripts": {
 		"build": "webpack",
 		"dev": "webpack serve",
-		"format": "prettier --write ./src/**/*"
+		"format": "prettier --write ./src/**/*",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@iwer/devui": "0.1.1",
 		"gamepad-wrapper": "1.3.4",
-		"gsap": "3.12.5",
+			"gsap": "3.12.5",
 		"iwer": "1.0.4",
 		"three": "0.165.0",
 		"troika-three-text": "0.49.1"
