--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
-  "name": "webxr-first-steps",
-  "private": true,
-  "homepage": "https://ZacharyEllison.github.io/vrps",
-  "devDependencies": {
-    "@types/three": "0.165.0",
-    "copy-webpack-plugin": "12.0.2",
-    "eslint": "9.10.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-webpack-plugin": "4.2.0",
-    "html-webpack-plugin": "5.6.0",
-    "prettier": "3.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.1.0"
-  },
-  "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve",
-    "format": "prettier --write ./src/**/*",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
-  "dependencies": {
-    "@iwer/devui": "0.1.1",
-    "gamepad-wrapper": "1.3.4",
-    "gsap": "3.12.5",
-    "iwer": "1.0.4",
-    "three": "0.165.0",
-    "troika-three-text": "0.49.1"
-  }
+    "name": "vrps.wlp",
+    "version": "1.0.0",
+    "description": "My Wonderland project",
+    "main": "js/index.js",
+    "type": "module",
+    "module": "js/index.js",
+    "scripts": {
+        "build": "echo \"The 'build' script is run by the editor and should produce your application bundle\""
+    },
+    "keywords": [
+        "wonderland-engine"
+    ],
+    "dependencies": {
+        "@wonderlandengine/api": ">=1.3.0 <1.4.0",
+        "@wonderlandengine/components": "^1.2.1",
+        "gl-matrix": "^3.4.3"
+    },
+    "overrides": {
+        "@wonderlandengine/api": "$@wonderlandengine/api"
+    }
 }
