--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,32 @@ dist
 
 # GitHub Pages branch
 gh-pages
+
+# NPM dependencies
+
+**/node_modules/
+
+
+# Packaged project files
+
+**/deploy/
+
+
+# Local editor data
+
+**/.editor/
+
+
+# Cached editor JS bundle
+
+**/cache/js/
+
+
+# Local UI state
+
+**/imgui.ini
+
+
+# Blender backup files
+
+*.blend1S
