--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -6,17 +6,19 @@ DockId=0x00000005
 Pos=350,29
 Size=959,647
 Collapsed=0
-DockId=0x00000005,2
+DockId=0x00000005
 
 [Window][Resources]
+Pos=307,29
+Size=626,541
 Collapsed=0
-DockId=0x00000005
+DockId=0x00000005,1
 
 [Window][Preferences]
 Pos=350,29
 Size=959,647
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000005
 
 [Window][Localization]
 Collapsed=0
@@ -31,8 +33,8 @@ Collapsed=0
 DockId=0x00000006
 
 [Window][Animation Editor]
-Pos=350,29
-Size=959,647
+Pos=307,29
+Size=838,541
 Collapsed=0
 DockId=0x00000005,1
 
@@ -44,40 +46,40 @@ DockId=0x00000005
 Pos=1311,29
 Size=414,647
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000006
 
 [Window][Main Window]
 Pos=0,0
-Size=1728,1009
+Size=1512,858
 Collapsed=0
 
 [Window][Scene View]
-Pos=350,29
-Size=959,647
+Pos=307,29
+Size=626,541
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Asset Browser]
-Pos=3,678
-Size=860,302
+Pos=3,572
+Size=752,257
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Console]
-Pos=865,678
-Size=860,302
+Pos=757,572
+Size=752,257
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene Outline]
 Pos=3,29
-Size=345,647
+Size=302,541
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
-Pos=1311,29
-Size=414,647
+Pos=935,29
+Size=574,541
 Collapsed=0
 DockId=0x00000006,0
 
@@ -92,18 +94,28 @@ Size=960,600
 Collapsed=0
 
 [Window][##legend]
-Pos=350,654
-Size=41,22
+Pos=307,548
+Size=38,22
 Collapsed=0
 
 [Window][##toolbar-right]
-Pos=1111,60
+Pos=735,60
 Size=185,32
 Collapsed=0
 
 [Window][##toolbar]
-Pos=355,60
+Pos=312,60
 Size=557,32
+Collapsed=0
+
+[Window][Project Wizard]
+Pos=276,129
+Size=960,600
+Collapsed=0
+
+[Window][Package Upgrade]
+Pos=503,301
+Size=506,256
 Collapsed=0
 
 [Table][0x769C0A53,2]
@@ -115,16 +127,41 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x9F38BC32,8]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=32
+Column 2  Width=256
+Column 3  Width=50
+Column 4  Width=45
+Column 5  Width=80
+Column 6  Width=120
+Column 7  Width=159
+
+[Table][0xE19ACBA0,5]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=59
+Column 2  Width=256
+Column 3  Width=200
+Column 4  Width=511
+
+[Table][0xB0051EB7,3]
+RefScale=16
+Column 0  Width=61
+Column 1  Width=256
+Column 2  Width=200
+
 [Docking][Data]
-DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=3,29 Size=1722,951 Split=Y
-  DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1728,705 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=345,705 Selected=0x57A23F0C
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1381,705 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=965,705 CentralNode=1 Selected=0x08AA43A5
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=414,705 Selected=0x199AB496
-  DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1728,302 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=863,302 Selected=0x6F7CD859
-    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=863,302 Split=X
-      DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=688,302 Selected=0x49278EEE
-      DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=173,302
+DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=3,29 Size=1506,800 Split=Y
+  DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1512,599 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=302,599 Selected=0x57A23F0C
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1208,599 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=626,599 CentralNode=1 Selected=0x31A92E12
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=574,599 Selected=0x199AB496
+  DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1512,257 Split=X
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=755,257 Selected=0x6F7CD859
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=755,257 Split=X
+      DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=602,257 Selected=0x49278EEE
+      DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=151,257
 
