--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -10,7 +10,7 @@ DockId=0x00000005
 
 [Window][Resources]
 Pos=307,29
-Size=626,541
+Size=838,541
 Collapsed=0
 DockId=0x00000005,1
 
@@ -36,7 +36,7 @@ DockId=0x00000006
 Pos=307,29
 Size=838,541
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000005
 
 [Window][Resource Tree]
 Collapsed=0
@@ -55,7 +55,7 @@ Collapsed=0
 
 [Window][Scene View]
 Pos=307,29
-Size=626,541
+Size=838,541
 Collapsed=0
 DockId=0x00000005,0
 
@@ -78,8 +78,8 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
-Pos=935,29
-Size=574,541
+Pos=1147,29
+Size=362,541
 Collapsed=0
 DockId=0x00000006,0
 
@@ -99,7 +99,7 @@ Size=38,22
 Collapsed=0
 
 [Window][##toolbar-right]
-Pos=735,60
+Pos=947,60
 Size=185,32
 Collapsed=0
 
@@ -123,10 +123,6 @@ RefScale=16
 Column 0  Width=195
 Column 1  Weight=1.0000
 
-[Table][0x70E81897,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-
 [Table][0x9F38BC32,8]
 RefScale=16
 Column 0  Width=64
@@ -137,6 +133,10 @@ Column 4  Width=45
 Column 5  Width=80
 Column 6  Width=120
 Column 7  Width=159
+
+[Table][0x70E81897,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Table][0xE19ACBA0,5]
 RefScale=16
@@ -157,8 +157,8 @@ DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=3,29 Size=1506,800 Split=Y
   DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1512,599 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=302,599 Selected=0x57A23F0C
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1208,599 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=626,599 CentralNode=1 Selected=0x31A92E12
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=574,599 Selected=0x199AB496
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=844,599 CentralNode=1 Selected=0x08AA43A5
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=362,599 Selected=0x199AB496
   DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1512,257 Split=X
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=755,257 Selected=0x6F7CD859
     DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=755,257 Split=X
