hopefully this fixes the camera

--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -118,6 +118,11 @@ Pos=503,301
 Size=506,256
 Collapsed=0
 
+[Window][Save changes?]
+Pos=605,357
+Size=302,144
+Collapsed=0
+
 [Table][0x769C0A53,2]
 RefScale=16
 Column 0  Width=195
