--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -95,7 +95,7 @@ Collapsed=0
 
 [Window][##legend]
 Pos=307,548
-Size=38,22
+Size=164,22
 Collapsed=0
 
 [Window][##toolbar-right]
@@ -156,6 +156,14 @@ RefScale=16
 Column 0  Width=61
 Column 1  Width=256
 Column 2  Width=200
+
+[Table][0x4200049D,5]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=61
+Column 2  Width=256
+Column 3  Width=200
+Column 4  Width=420
 
 [Docking][Data]
 DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=3,29 Size=1506,800 Split=Y
