--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "license": "ISC",
     "type": "module",
     "dependencies": {
-        "@wonderlandengine/api": "~1.3.1",
+        "@wonderlandengine/api": ">=1.4.0 <1.5.0",
         "@wonderlandengine/components": "~1.2.1",
         "gl-matrix": "^3.4.3",
         "howler": "^2.2.4",
@@ -28,5 +28,8 @@
     },
     "scripts": {
         "clean-projects": "wle-cleaner \"./*.wlp\" -r -e dev/wle-tool-utils/editor-bundle-extras.js"
+    },
+    "overrides": {
+        "@wonderlandengine/api": "$@wonderlandengine/api"
     }
 }
