--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -10,7 +10,7 @@ DockId=0x00000005
 
 [Window][Resources]
 Pos=307,29
-Size=838,541
+Size=838,548
 Collapsed=0
 DockId=0x00000005,1
 
@@ -29,8 +29,10 @@ Collapsed=0
 DockId=0x00000006
 
 [Window][Project Settings]
+Pos=1147,29
+Size=362,548
 Collapsed=0
-DockId=0x00000006
+DockId=0x00000006,1
 
 [Window][Animation Editor]
 Pos=307,29
@@ -50,36 +52,36 @@ DockId=0x00000006
 
 [Window][Main Window]
 Pos=0,0
-Size=1512,858
+Size=1512,865
 Collapsed=0
 
 [Window][Scene View]
 Pos=307,29
-Size=838,541
+Size=838,548
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Asset Browser]
-Pos=3,572
+Pos=3,579
 Size=752,257
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Console]
-Pos=757,572
+Pos=757,579
 Size=752,257
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene Outline]
 Pos=3,29
-Size=302,541
+Size=302,548
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
 Pos=1147,29
-Size=362,541
+Size=362,548
 Collapsed=0
 DockId=0x00000006,0
 
@@ -94,8 +96,8 @@ Size=960,600
 Collapsed=0
 
 [Window][##legend]
-Pos=307,548
-Size=164,22
+Pos=307,555
+Size=38,22
 Collapsed=0
 
 [Window][##toolbar-right]
@@ -114,7 +116,7 @@ Size=960,600
 Collapsed=0
 
 [Window][Package Upgrade]
-Pos=503,301
+Pos=510,310
 Size=506,256
 Collapsed=0
 
@@ -165,8 +167,36 @@ Column 2  Width=256
 Column 3  Width=200
 Column 4  Width=420
 
+[Table][0x11D41861,5]
+RefScale=16
+Column 0  Width=60
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=120
+Column 4  Width=156
+
+[Table][0x04028DB2,4]
+RefScale=16
+Column 0  Width=12
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=43
+
+[Table][0x9EF184B7,3]
+RefScale=16
+Column 0  Width=61
+Column 1  Width=256
+Column 2  Width=200
+
+[Table][0x4FF539D6,4]
+RefScale=16
+Column 0  Width=12
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=43
+
 [Docking][Data]
-DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=3,29 Size=1506,800 Split=Y
+DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=3,29 Size=1506,807 Split=Y
   DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1512,599 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=302,599 Selected=0x57A23F0C
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1208,599 Split=X
